Refactor settlements eligibility validation
- initiate settlement eligibility validation from
reimbursement controller in a after update action hook
- have settlements not attached to a shipment pass eligibiity validation

--- a/backend/app/views/spree/admin/reimbursements/show.html.erb
+++ b/backend/app/views/spree/admin/reimbursements/show.html.erb
@@ -65,7 +65,7 @@
     </tr>
     </thead>
     <tbody>
-    <% @reimbursement.settlements.each do |settlement| %>
+    <% @reimbursement.settlements.for_shipment.accepted.each do |settlement| %>
 
       <tr>
         <td>
@@ -75,7 +75,7 @@
           <%= settlement.shipment.shipping_method.name %>
         </td>
         <td>
-          <%= settlement.reimbursement_type %>
+          <%= settlement.reimbursement_type.name.humanize %>
         </td>
         <td>
           <%= settlement.display_amount %>
